--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </tr>
   </table>
   <hr>
-  <a href="personaldetails.html">Personal Details</a>
-  
+  <a href="personaldetails.html" style="color:blue">My Personal Details</a>
+
 
 </html>
