--- a/personaldetails.html
+++ b/personaldetails.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+  <h1>Details</h1>
   <table width="50%" cellspacing="20 pixels">
     <tr>
       <td>
@@ -42,14 +43,21 @@
         Togummi Village,Kovvur,Andhra
       </td>
     </tr>
-    <tr>
-      <td>
-        <a href="mailto:kodalikalyani1011@gmail.com target=" _blank" " rel=" noopener noreferrer">Contact</a>
-      </td>
-    </tr>
   </table>
-
-
+  <hr>
+<h1>Contact</h1>
+  <form class="" action="mailto:rmkk9095@gmail.com" method="post">
+    <label>Your Name :</label><br>
+    <input type="text" name="" value="" />
+    <br><br>
+    <label>Your Mail ID :</label><br>
+    <input type="email" name="" value="" />
+    <br><br>
+    <label>Your Message :</label><br />
+    <textarea name="Name" rows="5" cols="20"></textarea>
+    <br><br>
+    <input type="submit" name="" />
+  </form>
 </body>
 
 </html>
