--- a/personaldetails.html
+++ b/personaldetails.html
@@ -48,13 +48,13 @@
 <h1>Contact</h1>
   <form class="" action="mailto:rmkk9095@gmail.com" method="post">
     <label>Your Name :</label><br>
-    <input type="text" name="" value="" />
+    <input type="text" name="" value="" required />
     <br><br>
     <label>Your Mail ID :</label><br>
-    <input type="email" name="" value="" />
+    <input type="email" name="" value="" required />
     <br><br>
     <label>Your Message :</label><br />
-    <textarea name="Name" rows="5" cols="20"></textarea>
+    <textarea name="Name" rows="5" cols="20" required></textarea>
     <br><br>
     <input type="submit" name="" />
   </form>
